--- a/FEVHelper/packages.config
+++ b/FEVHelper/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net461" />
   <package id="Fody" version="4.2.1" targetFramework="net461" developmentDependency="true" />
+  <package id="MvvmLight" version="5.4.1.1" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="2.6.1" targetFramework="net461" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net461" />
