--- a/FEVHelper/FEVHelper.csproj
+++ b/FEVHelper/FEVHelper.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Commands\CommandHandler.cs" />
     <Compile Include="CSV\CSVFile.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
+    <Compile Include="MultiConverter.cs" />
     <Compile Include="VievModels\Base\BaseViewModel.cs" />
     <Compile Include="VievModels\DirectoryItemViewModel.cs" />
     <Compile Include="VievModels\Base\RelayCommand.cs" />
@@ -142,6 +143,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Converters\" />
     <Folder Include="Views\" />
   </ItemGroup>
   <ItemGroup>
